this is cartoon network

--- a/cartoon1.html
+++ b/cartoon1.html
@@ -6,10 +6,10 @@
     <title>Tom and Jerry</title>
 </head>
 <body>
-    <table border="2" width="100%">
+    <table width="100%">
         <tr>
-            <td>  <img src="tomm.jpg" alt="image" height="500px"  width="1000px" ></td>
-            <td><iframe width="960" height="500" src="https://www.youtube.com/embed/9fYNWfw1OcQ?si=RuBjZ9lj1bSHPNLI" 
+            <td>  <img src="tomm.jpg" alt="image"  height="520px"  width="650px" ></td>
+            <td><iframe width="800px" height="510px" src="https://www.youtube.com/embed/9fYNWfw1OcQ?si=RuBjZ9lj1bSHPNLI" 
                 title="YouTube video player" frameborder="0"
                  allow="accelerometer; autoplay; clipboard-write;
                   encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
