--- a/cartoon2.html
+++ b/cartoon2.html
@@ -6,10 +6,10 @@
     <title>BEN-10</title>
 </head>
 <body>
-    <table border="2" width="100%">
+    <table  width="100%">
         <tr>
-            <td>  <img src="Benn.png" alt="image" height="500"  width="1000" ></td>
-            <td><iframe width="1000" height="515" src="https://www.youtube.com/embed/pUoDgPCjaSQ?si=PWci39KiASVE5dn9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+            <td>  <img src="Benn.png" alt="image" height="550px"  width="800px" ></td>
+            <td><iframe width="700px" height="550px" src="https://www.youtube.com/embed/pUoDgPCjaSQ?si=PWci39KiASVE5dn9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
                 web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
         </tr>
     </table>
