--- a/cartoon4.html
+++ b/cartoon4.html
@@ -6,13 +6,13 @@
     <title>Tom and Jerry</title>
 </head>
 <body>
-    <table border="2" width="100%">
+    <table  width="100%">
         <tr>
-            <td>  <img src="dog.webp" alt="image" height="500px"  width="1000px" ></td>
-            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/eMqZR9gfPg0?si=Ze6ooAlepIY82Yek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            <td>  <img src="dog.webp" alt="image" height="520px"  width="650px" ></td>
+            <td><iframe width="800px" height="510px" src="https://www.youtube.com/embed/TdPGWEFa6UM?si=Co1hJa-Z_qSd1FsQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></td>
         </tr>
     </table>
-<table border="8" height="100" width="100%">
+<table border="3" height="100" width="1650px">
         <tr>
             <th>Director</th>
             <td>John R. Dilworth</td>
